--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -5,10 +5,16 @@
   margin: 20px 0;
 }
 
+.Dictionary h1 {
+  color: #053acc;
+  font-size: 20px;
+}
+
 .Dictionary input {
   width: 100%;
   padding: 5px 5px;
   border: 1px solid #c1dfc4;
   border-radius: 10px;
   color: #053acc;
+  opacity: 0.7;
 }
