--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,3 +1,12 @@
 .Meaning {
   color: #053acc;
 }
+
+.Meaning h3 {
+  font-size: 30px;
+}
+
+.Meaning .example {
+  font-style: italic;
+  opacity: 0.7;
+}
