--- a/src/Results.css
+++ b/src/Results.css
@@ -2,6 +2,25 @@
   color: #053acc;
 }
 
-.Result h2 {
-  font-size: 40px;
+.Results h2 {
+  font-size: 44px;
+}
+
+.Results a {
+  text-decoration: none;
+  font-size: 14px;
+  border: 1px solid #c1dfc4;
+  padding: 5px 10px;
+  border-radius: 16px;
+  margin-right: 10px;
+}
+
+.Results a:hover {
+  background: #c1dfc4;
+  color: white;
+  transition: all 150ms ease-in-out;
+}
+
+.Results .text {
+  opacity: 0.7;
 }
